--- a/MAIL_CLIENT/.classpath
+++ b/MAIL_CLIENT/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="AbsoluteLayout.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="mailObject.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
